--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -27,22 +27,19 @@
         tools:context=".MainActivityFragment"
         />
 
-    <TextView
-        android:id="@+id/loading"
-        android:layout_width="match_parent"
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/msg_loading"
-        style="@style/TextAppearance.AppCompat.Button"
+        style="@android:style/Widget.ProgressBar.Small"
         android:background="@android:color/background_light"
         android:alpha="0.4"
+        android:layout_centerInParent="true"
+        android:layout_alignParentBottom="false"
         android:enabled="true"
-        android:visibility="gone"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="false"
         android:gravity="center"
         android:paddingTop="@dimen/abc_dialog_padding_top_material"
-        android:paddingBottom="@dimen/abc_dialog_padding_top_material" />
-
+        android:paddingBottom="@dimen/abc_dialog_padding_top_material"
+        android:visibility="gone"  />
 
 </RelativeLayout>
