--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,6 @@
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fragment"
+    android:id="@+id/fragment_movies"
     android:name="com.himanshubahuguna.android.popularmovieshb.MainActivityFragment"
     tools:layout="@layout/fragment_main"
     android:layout_width="match_parent"
