--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -12,7 +12,8 @@
         android:layout_height="match_parent"
         android:horizontalSpacing="0dp"
         android:numColumns="2"
-        android:verticalSpacing="0dp">
+        android:verticalSpacing="0dp"
+        android:stretchMode="columnWidth">
 
     </GridView>
 </RelativeLayout>
