--- a/app/src/main/res/layout/activity_favorites.xml
+++ b/app/src/main/res/layout/activity_favorites.xml
@@ -1,5 +1,5 @@
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/fragment"
+    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/fragment_favmovies"
     android:name="com.himanshubahuguna.android.popularmovieshb.FavoritesFragment"
     tools:layout="@layout/fragment_favorites" android:layout_width="match_parent"
     android:layout_height="match_parent" />
